// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SequenceField /> renders correctly with props 1`] = `
<InputError
  className="sequence"
  error="test error"
  label={
    <div>
       Sequence 
      <Badge
        bsClass="badge"
        pullRight={false}
      >
        6
      </Badge>
    </div>
  }
  name="sequence"
  onChange={[MockFunction]}
  readOnly={true}
  rows={5}
  type="textarea"
  value="tester"
/>
`;

exports[`<SequenceField /> renders correctly without props 1`] = `
<InputError
  className="sequence"
  label={
    <div>
       Sequence 
      <Badge
        bsClass="badge"
        pullRight={false}
      >
        0
      </Badge>
    </div>
  }
  name="sequence"
  readOnly={false}
  rows={5}
  type="textarea"
  value=""
/>
`;
